--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
 PORT=4000
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=http://localhost:4000/
 MONGO_URI=mongodb+srv://ayushman249203:oc6vEXRplm7HmMmC@cluster0.3yyxafs.mongodb.net/?retryWrites=true&w=majority
